@@ -28,6 +28,10 @@ hw-detect (1.65) UNRELEASED; urgency=low
   * check-missing-firmware: Avoid trailing space in $files that caused it to
     look for firmware packages containing a file named "" (and probably match
     any package). Closes: #492247
+  * check-missing-firmware: Add a 1 second sleep before reading the missing
+    firmware log, just in case a module delays requesting firmware
+    until after modprobe returns, resulting in the log not being written in
+    time. (No such modules currently known.)
 
  -- Frans Pop <fjp@debian.org>  Wed, 23 Jul 2008 19:54:37 +0200
 
